--- a/public/css/index.css
+++ b/public/css/index.css
@@ -145,22 +145,22 @@ justify-content: center;
    
    main .mie_ride_about{
     background-color: #f9f9f9;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding: 50px 0px;
+    height: 100vh;
     }
 
     
 
     main .mie_ride_about .main_title_line{
-     padding-top: 30px;
+     padding-top: 20px;
      padding-bottom: 20px;
     }
     main .mie_ride_about .main_title_line h4{
        color: #646464;
-       letter-spacing: 2px;
        text-transform: uppercase;
-       font-weight:300; 
-       font-size: 18px;
+       letter-spacing: 2px;
+       font-weight:300;  
+       font-size: 20px;
 
     }
 
@@ -332,19 +332,19 @@ justify-content: center;
       }
       
      
-
-
-       
-     
       .mie_ride_contact {
-        padding: 50px 10px;
+        height: 100vh;
+        padding: 20px 10px;
         background-color: #f9f9f9;
       }
+
       .mie_ride_contact .contact_row{
-        margin-top: 30px;
+        margin-top: 60px;
 
       }
+    
       .mie_ride_contact h4{
+        margin-top: 30px;
          color: #646464;
          letter-spacing: 3px;
          text-transform: uppercase;
@@ -402,9 +402,7 @@ justify-content: center;
       
     
 
-  .mie_ride_contact .contact_row{
-    padding: 20px 0px;
-  }
+  
 
   .mie_ride_contact .contact_row .social_media{
     width: 100%;
@@ -505,27 +503,6 @@ justify-content: center;
 
   }
 
-  /* main .mie_ride_service .mie_ride_service_left_main{
-    background-image: url("../assets/images/seviceimage.png");
-    width: 350px;
-    height: 50px;
-    padding: 10px 0px;
-    box-sizing: border-box;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-   */
-
-  /* main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left::after {
-    content: "";
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    right: 0;
-    top: 0;
-    background-color: #f7b000;
-    background: url('https://cdn.triptotemples.com/images/icons/profile/profile-head-arrow.png');
-} */
 
 main .mie_ride_service .mie_ride_service_left_main{
     width:100%;
@@ -536,16 +513,19 @@ main .mie_ride_service .mie_ride_service_left_main{
     padding: 10px;
  
 }
+main .mie_ride_service .main_title_line{
+  padding: 20px 0px;
+}
 
 main .mie_ride_service .main_title_line h4{
 color: rgb(255, 255, 255);
 letter-spacing: 2px;
-font-weight: 300;
-font-size: 18px;
+font-weight:300;  
+font-size: 20px;
 
 }
 main .mie_ride_service .main_title_line p{
-  
+     
     font-family: "NexaLight";
     color: rgb(255, 255, 255);
     line-height: 1.32;
@@ -609,8 +589,7 @@ main .mie_ride_service .mie_ride_service_left_main{
   width:100%;
   margin-top: 340px;
   /* margin-bottom: 100px; */
-  position: relative;
-  height: auto;
+  position: relativ
   z-index: 100;
   background-color: #f9f9f9;
   border-radius: 30px;
@@ -998,11 +977,11 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
       width:100%;
       margin-top: 340px;
       position: relative;
-      height: auto;
       z-index: 100;
       padding: 0px 10px;
       background-color: #f9f9f9;
       border-radius: 30px;
+      
      
   }
   
@@ -1051,8 +1030,8 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
     main .mie_ride_service .mie_ride_service_right_main .mie_ride_service_right_main_2 .mie_ride_service_right_2 .Availabilty {
       background-color: #f3e638;
       position: relative;
-      margin-top: 90px;
-      padding: 40px 0px;
+      margin-top: 85px;
+      padding: 30px 0px;
       color: white;
       z-index: 135;
      
@@ -1072,7 +1051,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
       position: absolute;
       height: 30px;
       width: 30px;
-      top: 0px;
+      top: 5px;
       right: 30px;
     }
     main .mie_ride_service .mie_ride_service_right_main .mie_ride_service_right_main_2 .mie_ride_service_right_2 .service_icon_text p{
@@ -1140,7 +1119,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
       background-color: #024596;
       position: relative;
       margin-top: 90px;
-      padding: 30px 0px;
+      padding: 15px 0px;
       color: white;
       z-index: 4;
       border-radius: 0px 0px 20px 20px;
@@ -1156,14 +1135,14 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
   z-index: 140;
   color: #fff;
   position: absolute;
-  margin-top: -90px;
+  margin-top: -100px;
   padding: 20px;
     }
    main .mie_ride_service .mie_ride_service_right_main .mie_ride_service_right_main_3 .mie_ride_service_right_3 .service_icon_text img{
       position: absolute;
       height: 30px;
       width: 30px;
-      top: 0px;
+      top: 5px;
       right: 30px;
     }
    main .mie_ride_service .mie_ride_service_right_main .mie_ride_service_right_main_3 .mie_ride_service_right_3 .service_icon_text p{
@@ -1224,10 +1203,9 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
 
     }
     main .mie_ride_benifits .mie_ride_benifits_title h4{
-      letter-spacing: 3px;
-      font-weight: 400;
-      font-size: 18px;
-      font-family: "NexaLight";
+      letter-spacing: 2px;
+       font-weight:300;  
+         font-size: 20px;
       color: rgb(0, 0, 0);
       
     }
@@ -1525,10 +1503,9 @@ main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2{
 
 .mie_ride_advertise .mie_ride_advertise_title h4{
   color: #646464;
- letter-spacing: 2px;
   text-transform: uppercase;
-  font-weight:300;
-  
+  letter-spacing: 2px;
+  font-weight:300;  
   font-size: 20px;
 
 }
@@ -1544,20 +1521,20 @@ box-shadow: -14px 10px 18px -5px rgba(191, 191, 191, 1);
 .mie_ride_advertise .iphone_details .iphone_details_below{
   position: relative;
  background-color: #ffc61d;
- height: 180px;
+ height: 160px;
  width: 100%;
  z-index: 1;
  border-radius: 10px;
- margin-top: 30px;
+ margin-top: 20px;
 }
 .mie_ride_advertise .iphone_details .iphone_details_up{
   position: relative;
  background-color:#000000;
- height: 180px;
+ height: 160px;
  width: 100%;
  z-index: 2;
  border-radius: 10px;
- margin-top: -190px;
+ margin-top: -170px;
  margin-left: 10px;
 }
 
@@ -1678,26 +1655,19 @@ text-transform: uppercase;
 main .mie_ride_download{
   background: linear-gradient(0deg, rgb(100, 102, 105) 30%, rgba(30,31,32,1) 100%);
  padding: 40px 0px;
-
-
 }
-main .mie_ride_download:hover .title_line{
-  display: inline-block;
-  background: white;
-  width: 0;
-  height: 4px;
-animation: expandLine 3s ease-in-out forwards;
-}
+
 main .mie_ride_download .mie_ride_download_title{
 text-align: center;
-
+margin-top: 20px;
 }
+
 main .mie_ride_download .mie_ride_download_title h4{
   color: #fff;
- letter-spacing: 2px;
   text-transform: uppercase;
-  font-weight:300;
-  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight:300;  
+  font-size: 20px;
 }
 main .mie_ride_download .mie_ride_download_title p{
   letter-spacing: 3px;
@@ -2007,11 +1977,12 @@ main .mie_ride_download .botton_layer img{
 }
   main .mie_ride_service .main_title_line p {
       margin-top: 20px;
+      padding: 20px 0px;
        font-size: 13px;
     }
 
 main .main_ride_service {
-  margin-top: 55px;
+  margin-top: 60px;
 }
 main .mie_ride_service .mie_ride_service_right_main {
   margin-top: 85px;
@@ -2019,6 +1990,7 @@ main .mie_ride_service .mie_ride_service_right_main {
   
 main .mie_ride_benifits .mie_ride_benifits_title h4 {
   letter-spacing: 2px;
+  font-weight:300;  
   font-size: 20px;
 }
 
